<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Add data binding node for Voter Info ViewModel -->
    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_screen_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:title="@{viewModel.election.name}"
            app:titleTextColor="@color/white"
            tools:title="Louisiana Municipal Election" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewModel.election.electionDay.toString()}"
            android:textSize="16sp"
            tools:text="Sat Mar 20 00:00:00 CST 2021" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            style="@style/voterInfo_header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_header"
            android:visibility="@{viewModel.hasUrls ? View.VISIBLE : View.GONE}"
            tools:text="State Information" />

        <!-- Add click binding to open web URL -->
        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            style="@style/link_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.openUrl(viewModel.administrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            android:visibility="@{viewModel.administrationBody.votingLocationFinderUrl == null ? View.GONE : View.VISIBLE}" />

        <!-- Add click binding to open web URL -->
        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/link_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.openUrl(viewModel.administrationBody.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            android:visibility="@{viewModel.administrationBody.ballotInfoUrl == null ? View.GONE : View.VISIBLE}" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!--Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/voterInfo_header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.administrationBody.correspondenceAddress == null ? View.GONE : View.VISIBLE}"
            android:text="@string/state_correspondence_address" />

        <!-- Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@{viewModel.administrationBody.correspondenceAddress.toFormattedString()}"
            android:visibility="@{viewModel.administrationBody.correspondenceAddress == null ? View.INVISIBLE : View.VISIBLE}"
            android:textSize="18sp"
            tools:text="8585 Archives Ave Baton Rouge, Louisiana 70809" />

        <!-- Add button to save election to Room -->
        <Button
            android:id="@+id/saveElectionButton"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/default_padding"
            android:onClick="@{() -> viewModel.toggleElectionSavedState()}"
            android:paddingVertical="16dp"
            tools:text="Follow Election" />

    </LinearLayout>
</layout>